<resources>
    <string name="app_name">MUM L4 A1 Wallmart Store</string>
    <string name="label_signintoyouracc">Sign in to your account</string>
    <string name="label_wallmartlogo">Wallmart logo</string>
    <string name="label_email_address_required">Email address (required)</string>
    <string name="label_password">Password (required)</string>
    <string name="label_email_address_required2">Email address *</string>
    <string name="label_password2">Password *</string>
    <string name="tv_button_forgot_password">Forgot password?</string>
    <string name="tv_button_logout">Logout</string>
    <string name="button_signin">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="welcome">Welcome</string>
    <string name="default_username">Default username</string>
    <string name="label_electronix">Electronics</string>
    <string name="label_clothing">Clothing</string>
    <string name="label_beauty">Beauty</string>
    <string name="label_food">Food</string>
    <string name="label_create_your_account">Create your account</string>
    <string name="b_create_account">Create Account</string>
    <string name="label_first_name">First name *</string>
    <string name="label_last_name">Last name *</string>
    <string-array name="beauty_products_array">
        <item>Makeup</item>
        <item>Mascara</item>
        <item>Foundation</item>
        <item>Lip Gloss</item>
        <item>Eyeshadow</item>
        <item>Eyeliner</item>
        <item>Lip Balm</item>
        <item>Primer, Shine Control</item>
        <item>Exfoliators, Scrubs</item>
    </string-array>
    <string-array name="clothing_products_array">
        <item>Heavy sweater</item>
        <item>Dark-wash jeans</item>
        <item>Pantsuit</item>
        <item>Gray flannel pants</item>
        <item>Wool trousers</item>
        <item>Down vest</item>
        <item>Black cashmere wrap coat</item>
        <item>White button-down shirt (one cotton, one silky)</item>
        <item>Crisp white blouse</item>
        <item>Crewneck sweater</item>
        <item>Cardigan</item>
        <item>A black dress</item>
        <item>Pencil skirt</item>
        <item>Jeans</item>
    </string-array>
</resources>
