<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/label_wallmartlogo"
        android:src="@drawable/wallmart_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/label_signintoyouracc"
        android:textColor="#565353"
        android:textSize="32sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/tvEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_email_address_required"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_background"
        android:inputType="textEmailAddress"
        android:labelFor="@id/tvEmailAddress"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_password"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_background"
        android:inputType="textPassword"
        android:labelFor="@id/tvPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvClickableForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:autoLink="all"
        android:clickable="true"
        android:focusable="true"
        android:onClick="performForgotPassword"
        android:text="@string/tv_button_forgot_password"
        android:textColor="@color/forgotPass"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@id/tvDontHaveAcc"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/b_background_sign_in"
            android:onClick="performSignIn"
            android:text="@string/button_signin"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvDontHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#565353"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_above="@id/bCreateNewAccount"
            android:layout_centerHorizontal="true"
            android:text="@string/don_t_have_an_account" />

        <Button
            android:id="@+id/bCreateNewAccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/b_background_create_new_account"
            android:onClick="performCreateNew"
            android:text="@string/create_a_new_account"
            android:textAllCaps="false"
            android:textColor="@color/createNew" />
    </RelativeLayout>

</LinearLayout>
